# python-testing-goal-capitalize

./: .gitignore  Makefile  README.md  pyproject.toml
